Նոր ֆայլեր ու փոփոխություններ

--- a/book/aw03-basictypes.tex
+++ b/book/aw03-basictypes.tex
@@ -6,7 +6,7 @@
 Ծրագրավորման լեզուներում պարզ կամ ատոմար են կոչվում այն տիպերը, որոնց
 արժեքները չեն տրոհվում ավելի մանր մասերի։ Օրինակ, \texttt{boolean} տիպի
 \texttt{false} և \texttt{true} արժեքներն անտրոհելի են։ Նույն կերպ անտրոհելի
-են նաև \textt{int}, \texttt{double} կամ \texttt{byte} տիպերի արժեքները։
+են նաև \texttt{int}, \texttt{double} կամ \texttt{byte} տիպերի արժեքները։
 
 Բաղադրյալ տիպերի օբյեկտները կառուցվում են մի քանի նույնատիպ կամ տարատիպ
 օբյեկտներից։ Նույնատիպ օբյեկտների հավաքածու է, օրինակ, զանգվածը, որը
@@ -29,7 +29,7 @@ bs[4] = bs[0];  // հինգերորդ տարրին վերագրել առաջին
 Ինդեքսները սկսվում են 0-ից։ Եթե զանգվածն ունի 16 տարր, ապա առաջին տարրի
 ինդեքսը 0-ն է, իսկ վերջին տարրինը՝ 15-ն է։
 
-Բացի միաչափ զանգվածը, որը կոչվում է \enth{վեկտոր}, հաճախ հանդիպում են
+Բացի միաչափ զանգվածը, որը կոչվում է \emph{վեկտոր}, հաճախ հանդիպում են
 երկչափանի զանգվածներ՝ \emph{մատրիցներ}։ Օրինակ, հետևյալ հրամանը սահմանում
 է իրական թվերի 4 տողեր և 6 սյուներ ունեցող մատրից.
 
