--- a/book/structures.tex
+++ b/book/structures.tex
@@ -1,6 +1,6 @@
 
 %%\documentclass[a4paper,10pt,draft]{memoir}
-\documentclass[a4paper,10pt]{report}
+\documentclass[a4paper,10pt,draft]{report}
 \usepackage[top=1in,bottom=1.2in,left=1.2in,right=1in]{geometry}
 
 %\usepackage[Bjornstrup]{fncychap}
@@ -61,6 +61,8 @@
 \input{aw01-introduction.tex}
 
 %\input{aw02-literate.tex}
+
+\input{aw03-basictypes.tex}
 
 
 \input{ch01-linked-lists.tex}
