--- a/book/aw01-introduction.tex
+++ b/book/aw01-introduction.tex
@@ -1,7 +1,3 @@
-
-%
-%
-%
 \chapter{Ներածություն}
 
 Հարգելի ընթերցո՛ղ։
@@ -16,6 +12,14 @@
 \cite{ahu-dsa}։ Մեր նպատակն է եղել ինֆորմատիկա ուսումնասիրող I և II
 կուրսի ուսանողների համար պատրաստել մի «այբբենարան», որով նա կարող է
 ծանոթանալ «Տվյալների կառուցվածքներ» թեմային հիմունքներին և գիտելիքներ
-նախապատրաստել հետագա, ավելի մանրամասն ուսումնասիրությունների համար։ 
+նախապատրաստել հետագա, ավելի մանրամասն ուսումնասիրությունների համար։
 
 Ոչինչ այս գրքույկում նոր չէ և չի հորինվել կամ հայտնագործվել մեր կողմից։
+
+\begin{itemize}
+  \item Տվյալների կառուցվածքների մասին,
+  \item Ջավա լեզվի ընտրության մասին,
+  \item Տիպերի մասին,
+  \item Literate Programming֊ի մասին,
+  \item \(O\)\textit{-մեծ} գրառման մասին։
+\end{itemize}
