--- a/book/aw03-basictypes.tex
+++ b/book/aw03-basictypes.tex
@@ -1,44 +1,44 @@
-%
-%
-%
 \chapter{Պարզ ու բաղադրյալ տիպեր}
 
-Ծրագրավորման լեզուներում պարզ կամ ատոմար են կոչվում այն տիպերը, որոնց
-արժեքները չեն տրոհվում ավելի մանր մասերի։ Օրինակ, \texttt{boolean} տիպի
-\texttt{false} և \texttt{true} արժեքներն անտրոհելի են։ Նույն կերպ անտրոհելի
-են նաև \texttt{int}, \texttt{double} կամ \texttt{byte} տիպերի արժեքները։
+\textit{հեռացնել կամ ձևափոխել}
 
-Բաղադրյալ տիպերի օբյեկտները կառուցվում են մի քանի նույնատիպ կամ տարատիպ
-օբյեկտներից։ Նույնատիպ օբյեկտների հավաքածու է, օրինակ, զանգվածը, որը
-հիշողության անընդհատ տիրույթ զբաղեցնող միատեսակ օբյեկտների հաջորդականություն
-է։ Օրինակ.
+Ծրագրավորման լեզուներում \emph{պարզ} (կամ \emph{ատոմար}) են կոչվում
+այն տիպերը, որոնց արժեքները չեն տրոհվում ավելի մանր մասերի։ Ջավա
+լեզվի պարզ տիպերն են. \texttt{boolean}, \texttt{byte}, \texttt{short},
+\texttt{int}, \texttt{long}, \texttt{float}, \texttt{double} և
+\texttt{char}:
+
+\texttt{String} տիպը, թեև իր պարզ չէ, սակայն Ջավան հնարավորություն է
+տալիս դրա արժեքների հետ աշխատել պարզ տիպերի նմանությամբ։
+
+Բաղադրյալ տիպերի օբյեկտները կառուցվում են մի քանի նույնատիպ կամ
+տարատիպ օբյեկտներից։ Նույնատիպ օբյեկտների հավաքածու է \emph{զանգվածը},
+որը հիշողության անընդհատ տիրույթ զբաղեցնող միատեսակ օբյեկտների
+հաջորդականություն է։ Օրինակ, հետևյալ հրամանը, \texttt{new}
+գործողությամբ, ստեղծում է \texttt{byte} տիպի \(16\) տարրերի զանգված․
 
 \begin{verbatim}
-byte[] bs = new byte[16];
+var bs = new byte[16];
 \end{verbatim}
 
-\noindent հրամանը սահմանում է 16 հատ \texttt{byte} տիպի օբյեկտների
-զանգված։ Զանգվածի տարրերը հասանելի են ինդեքսավորման գործողության միջոցով։
-Այսպես.
+\noindent Զանգվածի տարրերն ինդեքսավորվում են \(0\)֊ից սկսվող ինդեքսներով և
+հասանելի են ինդեքսավորման \texttt{[]} գործողության միջոցով։ Այսպես.
 
 \begin{verbatim}
 bs[0] = 3;      // առաջին տարրին վերագրել 3 արժեքը
 bs[4] = bs[0];  // հինգերորդ տարրին վերագրել առաջին տարրի արժեքը
 \end{verbatim}
 
-Ինդեքսները սկսվում են 0-ից։ Եթե զանգվածն ունի 16 տարր, ապա առաջին տարրի
-ինդեքսը 0-ն է, իսկ վերջին տարրինը՝ 15-ն է։
-
 Բացի միաչափ զանգվածը, որը կոչվում է \emph{վեկտոր}, հաճախ հանդիպում են
 երկչափանի զանգվածներ՝ \emph{մատրիցներ}։ Օրինակ, հետևյալ հրամանը սահմանում
 է իրական թվերի 4 տողեր և 6 սյուներ ունեցող մատրից.
 
 \begin{verbatim}
-double[][] mx = new double[4][6];
+var mx = new double[4][6];
 \end{verbatim}
 
-Զանգվածներn իրենց տարրերի հասանելիության գործողության հաստատուն բարդություն
-են երաշխավորում անկախ տարրերի քանակից։
+Ընդհանրապես, Ջավա լեզուն հնարավորություն է տալիս ստեղծել երկուսից մեծ
+չաթողականություն ունեցող զանգվածներ ևս։
 
 Իրարից տարբերվող բաղադրիչներով տիպերն արտահայտվում են դասերի (\texttt{class})
 կամ գրառումների (\texttt{record}) միջոցով։ Օրինակ, շախմատի տախտակի վանդակը,
@@ -46,4 +46,13 @@ double[][] mx = new double[4][6];
 
 \begin{verbatim}
 public record Cell(char column, int row) {}
+\end{verbatim}
+
+Դասերի ու գրառումների նմուշները նույնպես ստեղծվում են \texttt{new} գործողությամբ։
+Օրինակ, հետևյալ կոդը սահմանում և ստեղծում է շախմատի տախտակի մոդելը․
+
+\begin{verbatim}
+Cell[][] board = new Cell[8][8];
+for(int r = 8; r > 0; --r)
+    for( )
 \end{verbatim}
