--- a/book/aw01-introduction.tex
+++ b/book/aw01-introduction.tex
@@ -7,3 +7,17 @@
   \item Literate Programming֊ի մասին,
   \item \(O\)\textit{-մեծ} գրառման մասին։
 \end{itemize}
+
+
+\smallskip
+Այս գրքի շարադրանքի համար ընտրել ենք \emph{Գրագետ ծրագրավորման}
+(\emph{Literate Programming}, \cite{LitProgArt}, \cite{LitProgBook})
+եղանակը: Այն մեզ հնարավորություն է տալիս տեքստի կոնկրետ հատվածում
+շարադրանքի միտքը կենտրոնացնել առանցքային թեմայի վրա և հետաձգել կամ
+տեղափոխել
+
+\smallskip
+Տվյալների կառուցվածքների հետ կատարվող գործողությունների՝ ալգորիթմների
+բարդության արտահայտման համար կօգտագործենք \(O\)\textit{-մեծ} գրառումը։
+%Ալգորիթմներին ու տվյալների կառուցվածքների նվիրված համարյա բոլոր գրքերում
+%խոսվում է այս մեթոդի մասին։ Տես, օրինակ, \cite{a}, \cite{b} կամ \cite{c}։
