--- a/book/strucref.bib
+++ b/book/strucref.bib
@@ -11,7 +11,7 @@
   title = {Data Structures and Algorithms},
   year = {1983},
   publisher = {Addison-Wesley Longman Publishing Co., Inc.}
-} 
+}
 
 @book{rs-kw-al,
   title={Algorithms},
@@ -20,4 +20,22 @@
   publisher={Pearson Education}
 }
 
+@article{LitProgArt,
+  author = {Knuth, Donald E.},
+  journal = {Comput. J.},
+  number = 2,
+  pages = {97-111},
+  title = {Literate Programming.},
+  volume = 27,
+  year = 1984
+}
 
+@book{LitProgBook,
+  author    = {Donald E. Knuth},
+  title     = {Literate programming},
+  series    = {{CSLI} lecture notes series},
+  volume    = {27},
+  publisher = {Center for the Study of Language and Information},
+  year      = {1992},
+  isbn      = {978-0-937073-81-0}
+}
