--- a/book/ch01-arrays.tex
+++ b/book/ch01-arrays.tex
@@ -19,6 +19,8 @@ var characters = new char[32];
 \end{verbatim}
 
 
-Զանգվածների հիմնական առավելությունն այն է, որ դրանք թույլ են տալիս իրենց տարրերին, \emph{ինդեքսի} միջոցով, դիմել հաստատուն՝ \(O(1)\), բարդությամբ գործողություններով։
+Զանգվածների հիմնական առավելությունն այն է, որ դրանք թույլ են տալիս
+իրենց տարրերին, \emph{ինդեքսի} միջոցով, դիմել հաստատուն՝ \(O(1)\),
+բարդությամբ գործողություններով։
 
 \input{ch01-array-impl.tex}
