--- a/book/structures.tex
+++ b/book/structures.tex
@@ -8,6 +8,8 @@
 
 \usepackage[dvips]{graphicx}
 \usepackage{fontspec}
+\usepackage{color}
+\usepackage{mathabx}
 \usepackage{noweb}
 
 %% From noweb FAQ
@@ -26,10 +28,6 @@
 
 %\def\nwendcode{\endtrivlist \endgroup}
 %\let\nwdocspar=\par
-
-
-
-\usepackage{mathabx}
 
 \setmainfont[Ligatures=TeX,HyphenChar="058A]{GHEAMariam}
 \setsansfont[Ligatures=TeX,HyphenChar="058A]{GHEAGrapalat}
