--- a/book/titlepage.tex
+++ b/book/titlepage.tex
@@ -12,9 +12,13 @@
 \vspace\drop
 \centering
 
-{\fontsize{42}{42}\selectfont\textbf{ՏՎՅԱԼՆԵՐԻ}}
+{\color{red}{\fontsize{64}{64}\selectfont\textbf{Ե\;Ր\;Կ\;Ե\;Ր}}}
 \null\vskip12pt\null
-{\fontsize{32}{32}\selectfont\textbf{ԿԱՌՈՒՑՎԱԾՔՆԵՐ}}
+{\fontsize{28}{28}\selectfont\textbf{տվյալների}}
+\null\vskip2pt\null
+{\fontsize{28}{28}\selectfont\textbf{կառուցվածքների}}
+\null\vskip8pt\null
+{\fontsize{24}{24}\selectfont\textbf{մասին}}
 
 \vspace{0.25\drop}
 \rule{0.3\textwidth}{0.4pt}\par
